rns-lang/tests/snapshots/parser-class_directive-header-name-string_literal_as_class_name.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.class  "HelloWorld"
.super java/lang/Object

----- STDOUT -----

----- STDERR -----
Error: Expected class name but found string literal
   ╭─[ test_data/integration/parser/class_directive/header/name/string_literal_as_class_name.ja:1:9 ]
   │
 1 │ .class  "HelloWorld"
   │         ──────┬─────  
   │               ╰─────── Found 'HelloWorld' instead of a class name. The .class directive requires a class name after optional access flags.
   │ 
   │ Note: Consider removing the quotes around the class name
───╯
